--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -29,16 +29,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.3
+  firebase_core: ^2.4.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
