--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^2.4.0
   flutter:
     sdk: flutter
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
