--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -33,9 +33,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
+  firebase_storage: ^11.0.9
   flutter:
     sdk: flutter
   image_picker: ^0.8.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
