--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
   assets:
     - assets/bck.jpg
     - assets/logo1.png
+    - assets/seller.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
