--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.0.9
   flutter:
     sdk: flutter
+  flutter_slidable: ^2.0.0
   flutter_spinkit: ^5.1.0
   image_picker: ^0.8.6
   uuid: ^3.0.7
