--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
+  email_auth: ^1.0.0
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
   firebase_storage: ^11.0.9
