--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
   firebase_storage: ^11.0.9
+
+
   flutter:
     sdk: flutter
   flutter_slidable: ^2.0.0
   flutter_spinkit: ^5.1.0
   image_picker: ^0.8.6
+  provider: ^6.0.5
   uuid: ^3.0.7
 
 dev_dependencies:
@@ -58,10 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/bck.jpg
-    - assets/logo1.png
-    - assets/seller.png
-    - assets/void.png
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
