--- a/admin/admin_panel/android/app/src/main/AndroidManifest.xml
+++ b/admin/admin_panel/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.admin_panel">
    <application
-        android:label="admin_panel"
+        android:label="BHRMAR-Admin"
         android:usesCleartextTraffic="true"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
