--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -29,25 +29,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
   cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
-
-  google_sign_in: ^5.4.2
-  shared_preferences: ^2.0.15
-
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0
+  google_sign_in: ^5.4.2
+  provider: ^6.0.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
