--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^5.4.2
   provider: ^6.0.5
   shared_preferences: ^2.0.15
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -56,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/home/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
