--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.9
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0
