--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   assets:
     - assets/
     - assets/home/
+    - assets/logo1.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
