--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
   firebase_storage: ^11.0.9
-
+  image_cropper: ^3.0.1
   flutter:
     sdk: flutter
   flutter_slidable: ^2.0.0
