--- a/admin/admin_panel/pubspec.yaml
+++ b/admin/admin_panel/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   email_auth: ^1.0.0
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
+  firebase_messaging: ^14.2.1
   firebase_storage: ^11.0.9
-  image_cropper: ^3.0.1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^13.0.0
   flutter_slidable: ^2.0.0
   flutter_spinkit: ^5.1.0
+  http: ^0.13.5
+  image_cropper: ^3.0.1
   image_picker: ^0.8.6
   provider: ^6.0.5
   uuid: ^3.0.7
