--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/
     - assets/home/
     - assets/logo1.png
+    - assets/void.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
