--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -33,15 +33,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
-  image_picker: ^0.8.6
   firebase_storage: ^11.0.9
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.1.0
+  flutter_staggered_grid_view: ^0.6.2
   google_sign_in: ^5.4.2
+  flutter_local_notifications: ^9.2.0
+  firebase_messaging: ^14.2.1
+  http: ^0.13.5
+  image_picker: ^0.8.6
+  intl: ^0.17.0
   provider: ^6.0.5
   shared_preferences: ^2.0.15
-  flutter_staggered_grid_view: ^0.6.2
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
