--- a/user/pubspec.yaml
+++ b/user/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.15
   uuid: ^3.0.7
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^2.0.0
