--- a/user/android/app/src/main/AndroidManifest.xml
+++ b/user/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user">
    <application
-        android:label="user"
+        android:label="BHRMAR"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
