--- a/user/android/gradle.properties
+++ b/user/android/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx1000m
+org.gradle.jvmargs=-XX:MaxHeapSize=256m -Xmx256m
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.parallel=true
