--- a/user/android/gradle.properties
+++ b/user/android/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.parallel=true
 org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx4608m
